Fixes: NB#203831 - There is no easy way to change the opacity of MNavigationBar.
RevBy: Dominik
Details: Added navigationBarOpacity property to MApplicationWindow.
This allow making navigationbar transparent in runtime,
which can be used to simulate videoGlobalAlpha.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,10 @@
 /*! \page news What's new in MeeGo Touch
 
+\section v02055 0.20.55
+
+\subsection New
+- MApplicationWindow::navigationBarOpacity propery. Navigation bar can now be made transparent on the fly.
+
 \section v02054 0.20.54
 
 \subsection New
