Fixes: NB#196936 - mservicemapper does not die along its session bus
RevBy: TrustMe
Details: this is a commit that does contain the "fixes" commit
message that was needed for commit c04cc3e7022bd3e32a359a84e1d4c6f3bcc10e3a,
i.e. the second but last commit.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.57~1) unstable; urgency=low
+
+  * Fixes: NB#196936 - mservicemapper does not die along its session bus
+
+ -- Holger Schröder <holger.schroeder.ext@basyskom.de>  Tue, 23 Nov 2010 14:48:36 +0200
+
 libmeegotouch (0.20.56-1) unstable; urgency=low
 
   * Fixes: NB#203831 - There is no easy way to change the opacity of MNavigationBar
