--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.58~1) unstable; urgency=low
+
+  * unreleased 
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 23 Nov 2010 16:12:38 +0000
+
 libmeegotouch (0.20.57-1) unstable; urgency=low
 
   * Fixes: NB#205385 - MSlider emits valueChanged multiple times after setting value in sliderReleased
