New: API for setting icon in MDialog's titlebar.
RevBy: Dominik Kapusta, Adrian Yanes
Details: Dialog has possibility to put icon in the same place that
progress indicator was originally placed. If bot (progress indicator and
icon) are set then indicator gets priority and overrides the icon.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,9 +1,14 @@
 /*! \page news What's new in MeeGo Touch
 
+\section v02059 0.20.59
+
+\subsection New
+- MDialog::titleBarIconId() property. MDialog can now have an icon in the left corner at the titlebar.
+
 \section v02056 0.20.56
 
 \subsection New
-- MApplicationWindow::navigationBarOpacity propery. Navigation bar can now be made transparent on the fly.
+- MApplicationWindow::navigationBarOpacity property. Navigation bar can now be made transparent on the fly.
 
 \section v02054 0.20.54
 
