Changes: fixes launcher documetion (example)
RevBy: Tomas Junnonen
Details: In the launcher example demonstrating simple application that
  acquires the MApplication instance through launcher APIs, the self-owned
  MApplication instance is not freed and proper destruction mechanisms
  aren't invoked. As this happens in documentation, it's quite safe to
  assume that someone will copy this behavior into their application.

--- a/doc/src/launcher.dox
+++ b/doc/src/launcher.dox
@@ -421,8 +421,11 @@ M_EXPORT int main(int argc, char ** argv)
 
     mainPage.setTitle("Hello World! (Now supports Launcher)");
     mainPage.appear();
-  
-    return app->exec();
+ 
+    int ret = app->exec();
+    delete app;
+ 
+    return ret;
 }
 \endcode
 
