--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libmeegotouch (0.20.60-2) unstable; urgency=low
+
+  * New version
+  * Changes: release 0.20.60 with  meegographicssystem disabled
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 30 Nov 2010 15:22:24 +0000
+
 libmeegotouch (0.20.60-1) unstable; urgency=low
 
   * New version
