--- a/src/icu-extradata/data/lang/zh.txt
+++ b/src/icu-extradata/data/lang/zh.txt
@@ -506,10 +506,21 @@ zh{
         zh{"中文"}
         zh_CN{"中文 (中国大陆)"}
         zh_Hans_CN{"中文 (中国大陆)"}
-        zh_SG{"中文（新加坡）"}
-        zh_Hans_SG{"中文（新加坡）"}
-        zh_Hans{"中文（简体）"}
-        zh_Hant{"中文（繁体）"}
+        zh_Hant_CN{"中文 (中國大陸)"}
+        zh_SG{"中文(新加坡)"}
+        zh_Hans_SG{"中文 (新加坡)"}
+        zh_Hant_SG{"中文 (新加坡)"}
+        zh_HK{"中文 (香港)"}
+        zh_Hans_HK{"中文 (香港)"}
+        zh_Hant_HK{"中文 (香港)"}
+        zh_MO{"中文 (澳門)"}
+        zh_Hans_MO{"中文 (澳门)"}
+        zh_Hant_MO{"中文 (澳門)"}
+        zh_TW{"中文 (台灣)"}
+        zh_Hans_TW{"中文 (台湾)"}
+        zh_Hant_TW{"中文 (台灣)"}
+        zh_Hans{"中文 (简体)"}
+        zh_Hant{"中文 (繁体)"}
         znd{"赞德文"}
         zu{"祖鲁文"}
         zun{"祖尼语"}
