--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.63~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 01 Dec 2010 19:12:54 +0000
+
 libmeegotouch (0.20.62-1) unstable; urgency=low
 
   * New version 
