--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,8 @@
 /*! \page news What's new in MeeGo Touch
 
+\section v02072 0.20.72
+- MWindow::notificationPreviewsVisible property for controlling whether notification banner previews are to be displayed on top of the window.
+
 \section v02070 0.20.70
 - MOvershotBezierEasingCurve - an easing curve class using a custom bezier easing function. For use in animations in libmeegotouch-based applications.
 
