--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.64~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Mon, 06 Dec 2010 14:02:15 +0000
+
 libmeegotouch (0.20.63-1) unstable; urgency=low
 
   * New version
