--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libmeegotouch (0.20.64-2) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#210881 - calendar app crashing on trying to add new event
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Fri, 10 Dec 2010 13:44:44 +0200
+
 libmeegotouch (0.20.64-1) unstable; urgency=low
 
   * New version
