--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libmeegotouch (0.20.65-2) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#211964 - Additional click is emitted when accessing object menu
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 16 Dec 2010 11:47:55 +0200
+
 libmeegotouch (0.20.65-1) unstable; urgency=low
 
   * New version
