--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+libmeegotouch (0.20.69-1) unstable; urgency=low
+  
+  * New version
+  * Fixes: NB#206058 - Sometimes MSceneWindow uses the landscape style even when the MWindow has been locked to portrait  
+  * Fixes: NB#208934 - Volume indicator doesnot return to landscape in video play
+  * Fixes: NB#212448 - MWindow constructor causes ContextProperty::waitForSubscription() to be called, which may cause all kinds of side effects in an application
+  * Fixes: NB#212289 - Visual press feedback is not shown always when tapping an icon button
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 28 Dec 2010 10:50:00 +0100
+
 libmeegotouch (0.20.68-1) unstable; urgency=low
 
   * New version
