--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.70~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 28 Dec 2010 12:05:38 +0100
+
 libmeegotouch (0.20.69-1) unstable; urgency=low
   
   * New version
