--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-libmeegotouch (0.20.70~1) unstable; urgency=low
+libmeegotouch (0.20.70-1) unstable; urgency=low
 
-  * unreleased
+  * New version
+  * Fixes: NB#194018 - MPannableViewport::setMinimumSize resets panned widget position.
+  * Fixes: NB#192037 - Multiline MTextedit doesn't expand to next line on word wrapping.
 
- -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 28 Dec 2010 12:05:38 +0100
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 04 Jan 2011 09:49:24 +0100
 
 libmeegotouch (0.20.69-1) unstable; urgency=low
   
