--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libmeegotouch (0.20.71-1) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#215046 - Regression: MeeGoTouch eats touchpoints
+  * Changes: Tests.xml generating script: commented out statistics printout
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 04 Jan 2011 13:07:02 +0100
+
 libmeegotouch (0.20.70-1) unstable; urgency=low
 
   * New version
