--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.72~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 05 Jan 2011 14:40:52 +0100
+
 libmeegotouch (0.20.71-1) unstable; urgency=low
 
   * New version
