--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.76~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 20 Jan 2011 11:21:14 +0200
+
 libmeegotouch (0.20.75-1) unstable; urgency=low
 
   * New version
